<resources>
    <string name="app_name">RM Dpte</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Auntenticar</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_orden">Orden</string>

    <string name="title_activity_main_menu">mainMenu</string>
    <string name="title_activity_about">about</string>
    <string name="title_activity_principal">Principal</string>
    <string name="rest_Name">Rest_Name</string>

    <string name="title_activity_fullscreen_principal">FullscreenPrincipal</string>
    <string name="title_activity_activity_principal">Selección de mesas</string>
    <string name="connection_error">Error en la conexión</string>
    <string name="mesa">Mesa</string>
    <string name="orden">Orden</string>
    <string name="cod_Orden">cod_Orden</string>
    <string name="user">User_Name</string>
    <string name="Error">Error</string>
    <string name="mesaOcupadaError">La mesa está ocupada</string>
    <string name="errorAlAutenticar">Nombre de usuario o contraseña incorrecta</string>
    <string name="autenticacionCorrecta">Autenticación correcta</string>
    <string name="estadoMesas">Estado de las mesas</string>


    <string name="laberOrderNo">Orden No:</string>
    <string name="labelMesaNo">Mesa No:</string>
    <string name="labelFecha">Fecha:</string>
    <string name="labelDependiente" >Dependiente:</string>
    <string name="labelMenu" >Menú</string>
    <string name="botonCerrarOrden" >Cerrar Orden</string>
    <string name="botonDeLaCasa">de la casa</string>
    <string name="botonLimpiar">Limpiar</string>
    <string name="botonEnviarCocina">Enviar a cocina</string>
    <string name="labelTotal">Total:</string>
    <string name="confirmacionDesconectar">Seguro que desea desconectarse</string>
    <string name="labelAceptar">Aceptar</string>
    <string name="title_activity_list_parent">list_parent</string>
    <string name="noItemSeleccionado">No hay ningún elemento seleccionado.</string>
    <string name="no_network">El dispositivo no está conectado al servidor</string>
    <string name="conexion_succesfull">La conexión con el servidor fue exitosa</string>


    <string name="errorAlBorrar">El producto seleccionado ya ha sido borrado</string>
    <string name = "moverAMesaString">Mover a mesa</string>
    <string name="seleccioneLaMesaAMover">Seleccione la mesa destino</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviarAcocina">Productos enviados a cocina</string>
    <string name="cerrarOrden">Orden cerrada</string>
    <string name="exNoServerConn">No hay conexión con el servidor.
        \nVerifique que esta conectado a la wi-fi del restaurante
        \ny que la PC servidor se encuentra encendida y con el servidor funcionando</string>
    <string name="nota">nota</string>
    <string name="agregar">Agregar</string>
    <string name="anclarOrden">Compartir Pedido</string>
    <string name="menuInfantil">Menú Infantil</string>
    <string name="search_title">Buscar...</string>
    <string name="error_al_cerrar_falta_enviar_cocina">Existen Productos que no se han enviado a cocina. Envie a cocina antes de cerrar la orden.</string>
    <string name="cederACamarero">Ceder a camarero</string>
    <string name="seleccioneElUsuarioACeder">Seleccione el usuario a ceder la mesa</string>
    <string name="seleccionararea">Seleccionar Area</string>
    <string name="version">Version 1.2.4.1</string>

</resources>
