<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.activities.PantallaPrincipalActivity"
    android:background="@color/color_Fondo"
    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/laberOrderNo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:text="@string/labelMesaNo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/ordenNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/textView4"
                android:text="####"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />


            <TextView
                android:id="@+id/mesaNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ordenNoLabel"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/textView5"
                android:text="####"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/textviewfecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelFecha"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelDependiente"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal"
                android:layout_below="@+id/textviewfecha"
                android:layout_toStartOf="@+id/dependienteLabel" />

            <TextView
                android:id="@+id/labelFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="15dp"
                android:text="####"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/dependienteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/labelFecha"
                android:layout_marginLeft="15dp"
                android:text="####"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            >


            <ListView
                android:id="@+id/listaOrdenReadOnly"
                android:layout_width="wrap_content"
                android:layout_height="456dp"
                android:layout_gravity="center"
                android:choiceMode="singleChoice"
                android:listSelector="@color/selector_listas"
                android:scrollingCache="true"
                android:smoothScrollbar="true" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.41">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/labelTotal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/normal"
                android:layout_marginEnd="19dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/layouttotales" />


            <LinearLayout
                android:id="@+id/layouttotales"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalPrincipalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:maxLines="1"
                    android:text="0.00 C.U.C"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#0bff00"
                    android:textSize="@dimen/normal" />

                <TextView
                    android:id="@+id/totalSecundariaLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00 C.U.C"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#0bff00"
                    android:textSize="@dimen/normal" />

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>

