<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_mano_oscuro"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.activities.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <TextView
                android:id="@+id/textViewNombreRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/rest_Name"
                android:textColor="@color/color_Labels"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/estadoMesas"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels"
                android:textSize="@dimen/subtitulos" />

            <TextView
                android:id="@+id/textviewusuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButton"
                android:layout_alignParentEnd="true"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_Labels" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/color_Fondo"
                android:scaleType="fitXY"
                android:src="@drawable/empty_user" />

        </RelativeLayout>

        <ListView
            android:id="@+id/listaMesas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:choiceMode="singleChoice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_carmelita_claro"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cambiarArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Pedido en Barra" />

            <Button
                android:id="@+id/pedidoDomicilio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Pedido a Domicilio" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/textViewNombreRest"
                android:enabled="false"
                android:text="R" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
