<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/especifico_app_primario"
    android:orientation="vertical"
    tools:context="com.activities.PantallaPrincipalActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="10">


        <TabHost
            android:id="@+id/tabHost"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secundario"
                    android:orientation="horizontal" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/especifico_app_primario">

                    <LinearLayout
                        android:id="@+id/ordenModel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/laberOrderNo"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/textView4"
                                android:text="@string/labelMesaNo"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                            <TextView
                                android:id="@+id/ordenNoLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@id/textView4"
                                android:text="####"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />


                            <TextView
                                android:id="@+id/mesaNoLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/ordenNoLabel"
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@id/textView5"
                                android:text="####"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView5"
                                android:text="@string/labelDependiente"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                            <TextView
                                android:id="@+id/dependienteLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/mesaNoLabel"
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@+id/textView3"
                                android:text="####"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttondespacharCocina"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:hapticFeedbackEnabled="true"
                                android:text="@string/botonEnviarCocina"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                            <Button
                                android:id="@+id/buttonLimpiar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:text="@string/botonLimpiar"
                                android:visibility="invisible" />

                            <Button
                                android:id="@+id/buttonCerrarOrden"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:hapticFeedbackEnabled="true"
                                android:text="@string/botonCerrarOrden"
                                android:textColor="@color/texto_primario"
                                android:textSize="@dimen/textSizeNormal" />

                        </RelativeLayout>


                        <ListView
                            android:id="@+id/listaOrden"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="8"
                            android:choiceMode="singleChoice"

                            android:listSelector="@color/secundario"
                            android:scrollingCache="true"
                            android:smoothScrollbar="true" />

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/secundario">

                            <CheckBox
                                android:id="@+id/deLaCasaCheckBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"

                                android:text="@string/botonDeLaCasa"
                                android:textColor="@color/texto_secundario"
                                android:textSize="@dimen/textSizeNormal" />


                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginEnd="19dp"
                                android:layout_marginRight="15dp"
                                android:layout_toStartOf="@+id/layouttotales"
                                android:gravity="center"
                                android:text="@string/labelTotal"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/texto_secundario"
                                android:textSize="@dimen/textSizeNormal" />


                            <LinearLayout
                                android:id="@+id/layouttotales"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/totalPrincipalLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"

                                    android:gravity="center"
                                    android:maxLines="1"
                                    android:text="0.00 C.U.C"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="@color/precios"
                                    android:textSize="@dimen/textSizeNormal"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/totalSecundariaLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="0.00 C.U.C"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="@color/precios"
                                    android:textSize="@dimen/textSizeNormal"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/searchText"
                            android:layout_width="match_parent"
                            android:layout_height="78dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="Buscar..."
                            android:inputType="textNoSuggestions|textFilter"
                            android:textColor="@color/texto_primario"
                            android:textSize="@dimen/precio" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ListView
                                android:id="@+id/menuPrincipalListView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginRight="4dp"
                                android:layout_weight="2"
                                android:choiceMode="singleChoice"
                                android:clickable="true"
                                android:focusable="true"
                                android:scrollingCache="true"
                                android:smoothScrollbar="true" />

                            <ListView
                                android:id="@+id/menuListView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="4"
                                android:choiceMode="singleChoice"
                                android:clickable="true"
                                android:focusable="true"
                                android:scrollingCache="true"
                                android:smoothScrollbar="true" />
                        </LinearLayout>


                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </LinearLayout>

</RelativeLayout>

